# process-bot

./: .env.example  .gitignore  README.md  package-lock.json  package.json  project-spec.md  pyproject.toml  render.yaml  tailwind.config.js  vite.config.js
deploy/: process-bot.service.example
docs/: digitalocean-droplet.md  oracle-free-tier.md
frontend/: index.html  main.jsx
frontend/src/: App.jsx  index.css
frontend/src/components/animate-ui/components/backgrounds/: gravity-stars.jsx
process_bot/: __init__.py  api.py  app.py  bot.py  company_registry.py  config.py  database.py  models.py  normalization.py  parser.py  schemas.py  seed.py  services.py  stats_card.py  web.py
process_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
process_bot/company_data/: cs_careers_companies_900.csv
process_bot/static/: dashboard.css  dashboard.js
process_bot/static/app/: index.html
process_bot/static/app/assets/: index-B7dqbDkj.js  index-BQUDa_H4.js  index-Bsxcc44r.css  index-CHvsSynO.js  index-CSbyCj7B.css  index-Cj_iyfIQ.js  index-DHXuC627.css  index-DIWNMpV8.css  index-O8qDrVIe.js  index-XRFr3VYV.js  index-Yecv_I1L.css  index-_OPvwNEm.css  index-rJXWFL5o.js
process_bot/templates/: index.html
tests/: test_company_alias_suggestions.py  test_parser.py  test_stage_progression.py  test_stats_card.py
